# Shop-AI

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
apps/client/: components.json  next.config.mjs  package.json  tsconfig.json
apps/client/app/: layout.tsx
apps/client/app/(admin)/admin/: layout.tsx  page.tsx
apps/client/app/(admin)/admin/ai-generator/: page.tsx
apps/client/app/(admin)/admin/analytics/: page.tsx
apps/client/app/(admin)/admin/chatbot/: page.tsx
apps/client/app/(admin)/admin/documents/: page.tsx
apps/client/app/(admin)/admin/products/: page.tsx  product-form.tsx
apps/client/app/(admin)/admin/settings/: page.tsx
apps/client/app/(store)/store/: layout.tsx  page.tsx
apps/client/app/(store)/store/[slug]/: page.tsx
apps/client/app/(store)/store/product/: page.tsx
apps/client/app/(store)/store/product/[id]/: page.tsx
apps/client/app/(store)/store/profile/: page.tsx
apps/client/components/: providers.tsx
apps/client/components/chatbot/: chatbot-wrapper.tsx  floating-chatbot.tsx
apps/client/components/layout/: app-header.tsx  app-sidebar.tsx
apps/client/components/shared/: command-menu.tsx  data-table.tsx
apps/client/components/store/: cart-drawer.tsx  cart-provider.tsx  product-card-skeleton.tsx  product-card.tsx  product-detail-content.tsx  store-footer.tsx  store-navbar.tsx  store-search.tsx
apps/client/components/store/home/: products-section.tsx
apps/client/hooks/admin/: use-chat.ts  use-documents.ts  use-products.ts
apps/client/hooks/store/: use-products.ts
apps/client/lib/: animation-variants.ts  image-url.ts  query-client.ts
apps/client/server/: axios-client.ts
apps/client/server/admin/: ai-fetchers.ts  chat-fetchers.ts  document-fetchers.ts  product-fetchers.ts
apps/client/server/store/: product-fetchers.ts
apps/client/types/: chat.ts  document.ts  product.ts
apps/server/: main.py  package.json  pyproject.toml
apps/server/api/: __init__.py  chat_routes.py  document_routes.py  product_routes.py  store_routes.py
apps/server/api/admin/: ai.py  chat.py  documents.py  products.py  upload.py
apps/server/api/store/: products.py
apps/server/controllers/: __init__.py  chat_controller.py  document_controller.py  product_controller.py
apps/server/controllers/admin/: chat_controller.py  product_controller.py
apps/server/controllers/store/: product_controller.py
apps/server/core/: config.py  database.py  dependencies.py
apps/server/db/: __init__.py  document_repository.py  product_repository.py  vector_repository.py
apps/server/models/: __init__.py  document_model.py  product_model.py
apps/server/schemas/: __init__.py  ai_schema.py  chat_schema.py  document_schema.py  product_schema.py
apps/server/uploads/documents/: 27f33d70-9077-4d16-9e5d-8ebd19910027_gift-wrapping.md  67c12260-b2c1-4673-9989-63bd9d6aa5b6_return-policy.md  7ed5592f-f5b6-4e6a-b774-59b011e81640_shipping-policy.md  b41be30c-4ba2-4e1a-a7b4-f45abfe5b2d2_order-tracking.md  bd49ad25-2708-4a8e-b66f-cb62dfa685dd_privacy-policy.md
apps/server/utils/: ai_generator.py  chunker.py  cloudinary.py  document_parser.py  embedding.py  slug.py
apps/web/: components.json
apps/web/app/: layout.tsx
